--- a/src/assets/fonts/iconfont/iconfont.css
+++ b/src/assets/fonts/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4847747 */
-  src: url('iconfont.woff2?t=1743332243087') format('woff2'),
-       url('iconfont.woff?t=1743332243087') format('woff'),
-       url('iconfont.ttf?t=1743332243087') format('truetype');
+  src: url('iconfont.woff2?t=1762347062865') format('woff2'),
+       url('iconfont.woff?t=1762347062865') format('woff'),
+       url('iconfont.ttf?t=1762347062865') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-pay:before {
+  content: "\e631";
+}
+
+.icon-shoucang:before {
+  content: "\e602";
 }
 
 .icon-shopshoppingco:before {
